feat(app): added get lastest badge endpoint
